@@ -1,6 +1,6 @@
 /*******************************************************************************
     Creme is a free/open-source Customer Relationship Management software
-    Copyright (C) 2013-2023  Hybird
+    Copyright (C) 2013-2025  Hybird
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as published by
@@ -370,10 +370,12 @@ creme.widget.CheckListSelect = creme.widget.declare('ui-creme-checklistselect', 
     },
 
     cleanedval: function(element) {
+        var to = this.options.datatype.toLowerCase();
+
         return this.val(element).map(function(value) {
             return creme.utils.convert(value, {
                 from: 'string',
-                to: this.options.datatype.toLowerCase(),
+                to: to,
                 defaults: value
             });
         });
